Syslog message collector enhancement. Now you can receive message via both TCP and UDP protocols. We use io.netty to start and handle message and to process later in ODL datastore.
Change-Id: Ifa58a9a06c8f8f96658070dd3c92f31b018eee4c
Signed-off-by: Kun Chen <kunch@tethrnet.com>
Also-By: Wei Lai <weilai@tethrnet.com>